# Aircraft-Routing-Suite

./: LICENSE  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/src/: main.cpp
backend/src/config/: Database.cpp  Database.hpp
backend/src/controllers/: AdminFlightController.hpp  AuthController.hpp  FlightController.hpp
backend/src/models/: DTOs.hpp
backend/src/repositories/: AuditRepository.hpp  FlightRepository.hpp  UserRepository.hpp
backend/src/services/: AuthService.hpp  FlightService.hpp
backend/src/utils/: CryptoUtils.hpp
db/: init_schema.sql  test_data.sql
frontend/: admin.html  index.html  login.html
frontend/css/: style.css
frontend/js/: admin.js  board.js  login.js
